--- a/WEB2_JS/web/1.html
+++ b/WEB2_JS/web/1.html
@@ -4,6 +4,8 @@
   <title>WEB1 - html</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="colors.js"></script>
 </head>
 
 <!-- <style>
@@ -53,6 +55,9 @@
 <body>
   <!-- <input type="checkbox"> -->
   <h1><a href="index.html">WEB</a></h1>
+  <input type="button" value="night" onclick="
+  nightDayHandler(this);
+  ">
   <div id="grid">
     <ol>
       <b>ol</b>:ordered list<br>
