--- a/WEB2_JS/web/2.html
+++ b/WEB2_JS/web/2.html
@@ -4,6 +4,8 @@
   <title>WEB1 - CSS</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="colors.js"></script>
   <!-- <style>
     body{
       margin:0;
@@ -61,6 +63,9 @@
 
 <body>
   <h1><a href="index.html">WEB</a></h1>
+  <input type="button" value="night" onclick="
+  nightDayHandler(this);
+  ">
   <div id = "grid">
     <ol>
       <!-- <li><a href="1.html" class="saw">html</a></li>
