--- a/WEB2_JS/web/ex3.html
+++ b/WEB2_JS/web/ex3.html
@@ -3,35 +3,54 @@
 <head>
   <title></title>
   <meta charset = "utf-8">
-  <script>
-    function nightDayHandler(self){
-      var target = document.querySelector('body');
-      if(self.value==='night'){
-        target.style.backgroundColor = 'black';
-        target.style.color = 'white';
-        self.value='day';
-
-        var alist = document.querySelectorAll('a');
-        var i = 0;
-        while(i<alist.length){
-          alist[i].style.color = 'powderblue';
-          i = i + 1;
-        }
-      }
-      else{
-        target.style.backgroundColor = 'white';
-        target.style.color = 'black';
-        self.value='night';
-
-        var alist = document.querySelectorAll('a');
-        var i = 0;
-        while(i<alist.length){
-          alist[i].style.color = 'blue';
-          i = i + 1;
-        }
+  <script src="colors.js"></script>
+  <!-- <script>
+  var Links = {
+    setColor:function(color){
+      var alist = document.querySelectorAll('a');
+      var i = 0;
+      while(i<alist.length){
+        alist[i].style.color = color;
+        i = i + 1;
       }
     }
-  </script>
+  }
+  var Body = {
+    setColor:function(color){
+      document.querySelector('body').style.color = color;
+    },
+    setBackgroundColor:function(color){
+      document.querySelector('body').style.backgroundColor = color;
+    }
+  }
+
+
+  function nightDayHandler(self){
+    var target = document.querySelector('body');
+    if(self.value==='night'){
+      Body.setBackgroundColor('black');
+      Body.setColor('white');
+      self.value='day';
+
+      LinksSetColor('powderblue');
+    }
+    else{
+      Body.setBackgroundColor('white');
+      // target.style.backgroundColor = 'white';
+      Body.setColor('black');
+      // target.style.color = 'black';
+      self.value='night';
+
+      LinksSetColor('blue');
+      // var alist = document.querySelectorAll('a');
+      // var i = 0;
+      // while(i<alist.length){
+      //   alist[i].style.color = 'blue';
+      //   i = i + 1;
+      // }
+    }
+  }
+  </script> -->
 </head>
   <!-- <style>
     .js{
